--- a/agi.html
+++ b/agi.html
@@ -6,7 +6,7 @@
 </head>    
     <body>
         <h2>Agility, "You gotta go fast"</h2>
-
+        <img src="https://hydra-media.cursecdn.com/dota2.gamepedia.com/archive/2/2d/20140619032027%21Agility_attribute_symbol.png?version=df89392bd6222c4dbaf91542f9b55eef">
 <p> Agility is a primary attribute for 35 hereos within dota 2 at the moment. But, what does agility do within the game?</p>
 <p> Agility is used for only two things within dota 2</p>
 <ul>
