--- a/str.html
+++ b/str.html
@@ -6,6 +6,7 @@
 </head>    
     <body>
         <h2>Strength, "For the Wise, Power"</h2>
+                <img src="https://hydra-media.cursecdn.com/dota2.gamepedia.com/archive/7/7a/20140619124053%21Strength_attribute_symbol.png?version=3d1a1d4762d21b01fea8d18ad7b52c1f">
 
 <p> Strength is a primary attribute for 37 hereos within dota 2 at the moment. But, what does Strength do within the game?</p>
 <p> Strength is used for only two things within dota 2</p>
