--- a/int.html
+++ b/int.html
@@ -6,6 +6,7 @@
 </head>    
     <body>
         <h2>Intelligence, "For the Wise, Power"</h2>
+                <img src="https://hydra-media.cursecdn.com/dota2.gamepedia.com/archive/5/56/20140619032021%21Intelligence_attribute_symbol.png?version=6dcb8daf6aa64ca353f36795cfe3156e">
 
 <p> Intelligence is a primary attribute for 41 hereos within dota 2 at the moment. But, what does Intelligence do within the game?</p>
 <p> Intelligence is used for only two things within dota 2</p>
