--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 ">Agility</a></li>
              <li><a href="https://hydra-media.cursecdn.com/dota2.gamepedia.com/archive/5/56/20140619032021%21Intelligence_attribute_symbol.png?version=6dcb8daf6aa64ca353f36795cfe3156e">Intelligence</a></li>
        </ol>  
+        <p>All game knowledge is from dota 2 <a href="http://blog.dota2.com/">Dota 2</a></p>
         <h3>What is going on recently with Dota 2</h3>
             <a href="#" id="submit">Get tweets</a>
            
