--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <li><a href="agi.html">Agility</a>
   <li><a href="int.html">Inteligence</a>
 </ul>
-        <p>All game knowledge is from dota 2 <a href="http://blog.dota2.com/">Dota 2</a></p>
+        <p>All game knowledge is from <a href="http://blog.dota2.com/">Dota 2</a></p>
         <p>The three images were imported from here</p>
         <ol>
              <li><a href="https://hydra-media.cursecdn.com/dota2.gamepedia.com/archive/7/7a/20140619124053%21Strength_attribute_symbol.png?version=3d1a1d4762d21b01fea8d18ad7b52c1f">Strength</a></li>
