--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 </head>    
     <body>
         <h2>Dota 2 stats and how they work</h2>
-        <img id="str" src="https://hydra-media.cursecdn.com/dota2.gamepedia.com/archive/7/7a/20140619124053%21Strength_attribute_symbol.png?version=3d1a1d4762d21b01fea8d18ad7b52c1f">
-        <img id="agi" src="https://hydra-media.cursecdn.com/dota2.gamepedia.com/archive/2/2d/20140619032027%21Agility_attribute_symbol.png?version=df89392bd6222c4dbaf91542f9b55eef">
-        <img id="int"src="https://hydra-media.cursecdn.com/dota2.gamepedia.com/archive/5/56/20140619032021%21Intelligence_attribute_symbol.png?version=6dcb8daf6aa64ca353f36795cfe3156e">
+        <img id="str" alt="Strength" src="https://hydra-media.cursecdn.com/dota2.gamepedia.com/archive/7/7a/20140619124053%21Strength_attribute_symbol.png?version=3d1a1d4762d21b01fea8d18ad7b52c1f">
+        <img id="agi" alt="Agility" src="https://hydra-media.cursecdn.com/dota2.gamepedia.com/archive/2/2d/20140619032027%21Agility_attribute_symbol.png?version=df89392bd6222c4dbaf91542f9b55eef">
+        <img id="int" alt="Intelligence" src="https://hydra-media.cursecdn.com/dota2.gamepedia.com/archive/5/56/20140619032021%21Intelligence_attribute_symbol.png?version=6dcb8daf6aa64ca353f36795cfe3156e">
 
 <ul>
   <li><a href="str.html">Strength</a>
