--- a/str.html
+++ b/str.html
@@ -10,11 +10,11 @@
 
 <p> Strength is a primary attribute for 37 hereos within dota 2 at the moment. But, what does Strength do within the game?</p>
 <p> Strength is used for only two things within dota 2</p>
-<ul>
-  <li>It increases your overall health by 20 for each point</a>
-  <li>It increases your overall health regen by 0.03 per point</a>
-  <li>And if your hero has the primary attribute of Strength it increases their physical damage by 1 point</a>
-</ul>
+
+  <p>It increases your overall health by 20 for each point</p>
+  <p>It increases your overall health regen by 0.03 per point</p>
+  <p>And if your hero has the primary attribute of Strength it increases their physical damage by 1 point</p>
+
 <p><a href="index.html">Back to Home</a></p>
     </body>
 </html>
