--- a/agi.html
+++ b/agi.html
@@ -9,11 +9,11 @@
         <img src="https://hydra-media.cursecdn.com/dota2.gamepedia.com/archive/2/2d/20140619032027%21Agility_attribute_symbol.png?version=df89392bd6222c4dbaf91542f9b55eef">
 <p> Agility is a primary attribute for 35 hereos within dota 2 at the moment. But, what does agility do within the game?</p>
 <p> Agility is used for only two things within dota 2</p>
-<ul>
-  <li>It increases your attack speed by 1 for each point</a>
-  <li>It increases your overall armor by 0.14 per point</a>
-  <li>And if your hero has the primary attribute  of agility it increases their physical damage by 1 point</a>
-</ul>
+
+  <p>It increases your attack speed by 1 for each point</p>
+  <p>It increases your overall armor by 0.14 per point</p>
+  <p>And if your hero has the primary attribute  of agility it increases their physical damage by 1 point</p>
+
 <p><a href="index.html">Back to Home</a></p>
     </body>
 </html>
