--- a/int.html
+++ b/int.html
@@ -10,11 +10,11 @@
 
 <p> Intelligence is a primary attribute for 41 hereos within dota 2 at the moment. But, what does Intelligence do within the game?</p>
 <p> Intelligence is used for only two things within dota 2</p>
-<ul>
-  <li>It increases your overall mana pool by 12 for each point</a>
-  <li>It increases your overall mana regen by 0.04 per point</a>
-  <li>And if your hero has the primary attribute of Intelligence it increases their physical damage by 1 point</a>
-</ul>
+
+  <p>It increases your overall mana pool by 12 for each point</p>
+  <p>It increases your overall mana regen by 0.04 per point</p>
+  <p>And if your hero has the primary attribute of Intelligence it increases their physical damage by 1 point</p>
+
 <p><a href="index.html">Back to Home</a></p>
     </body>
 </html>
