--- a/str.html
+++ b/str.html
@@ -6,14 +6,13 @@
 </head>    
     <body>
         <h2>Strength, "For the Wise, Power"</h2>
-                <img src="https://hydra-media.cursecdn.com/dota2.gamepedia.com/archive/7/7a/20140619124053%21Strength_attribute_symbol.png?version=3d1a1d4762d21b01fea8d18ad7b52c1f">
-
-<p> Strength is a primary attribute for 37 hereos within dota 2 at the moment. But, what does Strength do within the game?</p>
-<p> Strength is used for only two things within dota 2</p>
+        <img src="https://hydra-media.cursecdn.com/dota2.gamepedia.com/archive/2/2d/20140619032027%21Agility_attribute_symbol.png?version=df89392bd6222c4dbaf91542f9b55eef">
+<p> Agility is a primary attribute for 35 hereos within dota 2 at the moment. But, what does agility do within the game?</p>
+<p> Agility is used for only two things within dota 2</p>
 
   <p>It increases your overall health by 20 for each point</p>
   <p>It increases your overall health regen by 0.03 per point</p>
-  <p>And if your hero has the primary attribute of Strength it increases their physical damage by 1 point</p>
+  <p>And if your hero has the primary attribute  of strength it increases their physical damage by 1 point</p>
 
 <p><a href="index.html">Back to Home</a></p>
     </body>
