--- a/int.html
+++ b/int.html
@@ -2,18 +2,17 @@
 <html>
 <head>
     <link href="main.css" type="text/css" rel="stylesheet">
-    <h1>How does Intelligence work in Dota 2</h1>
+    <h1>How does intelligence work in Dota 2</h1>
 </head>    
     <body>
         <h2>Intelligence, "For the Wise, Power"</h2>
-                <img src="https://hydra-media.cursecdn.com/dota2.gamepedia.com/archive/5/56/20140619032021%21Intelligence_attribute_symbol.png?version=6dcb8daf6aa64ca353f36795cfe3156e">
-
-<p> Intelligence is a primary attribute for 41 hereos within dota 2 at the moment. But, what does Intelligence do within the game?</p>
-<p> Intelligence is used for only two things within dota 2</p>
+        <img src="https://hydra-media.cursecdn.com/dota2.gamepedia.com/archive/5/56/20140619032021%21Intelligence_attribute_symbol.png?version=6dcb8daf6aa64ca353f36795cfe3156e">
+<p> Agility is a primary attribute for 41 hereos within dota 2 at the moment. But, what does agility do within the game?</p>
+<p> Agility is used for only two things within dota 2</p>
 
   <p>It increases your overall mana pool by 12 for each point</p>
   <p>It increases your overall mana regen by 0.04 per point</p>
-  <p>And if your hero has the primary attribute of Intelligence it increases their physical damage by 1 point</p>
+  <p>And if your hero has the primary attribute  of Intelligence it increases their physical damage by 1 point</p>
 
 <p><a href="index.html">Back to Home</a></p>
     </body>
